# Cloudgate

./: .gitignore  CHANGELOG_DETAILED.txt  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  GameController.cpp  GameView.cpp  GameView.hpp  LICENSE  LevelCanvas.cpp  LevelCanvas.hpp  LevelEditor.cpp  LevelEditor.hpp  LevelEditor.qml  LevelEditorController.cpp  Main.qml  Präsentation_Speichern_Laden.md  README.md  SecondPage.qml  THIRD_PARTY.md  TileSet.cpp  TileSet.hpp  TilesetPalette.cpp  assets.qrc  leveling.xml  main.cpp  pages.cpp  pages.h
ext/HighFive/: CMakeLists.txt
ext/HighFive/include/highfive/bits/: H5Slice_traits_misc.hpp
ext/HighFive/tests/unit/: tests_high_five_base.cpp
game/: TileTree.tcc  Vector.tcc
game/include/: Actor.hpp  ActorForces.hpp  AnimatedRenderable.hpp  Camera.hpp  JumperTypes.hpp  LayerManager.hpp  Level.hpp  LevelForces.hpp  LevelParser.hpp  MainWindow.hpp  Monster.hpp  MovingRenderable.hpp  NumberDigit.hpp  Physics.hpp  Renderable.hpp  SDLRenderable.hpp  SharedArray.hpp  StateController.hpp  StaticRenderable.hpp  TileArray.hpp  TileSet.hpp  TileSetRepresentation.hpp  TileTree.hpp  TileTree.tcc  TimerDigit.hpp  Untitled  Util.hpp  Vector.hpp
game/io/: BaseHdf5IO.hpp  BaseHdf5IO.tcc  Hdf5Util.hpp  TextureIO.hpp  TextureIO.tcc  TileSetIO.hpp  TileSetIO.tcc
game/src/: Actor.cpp  ActorForces.cpp  AnimatedRenderable.cpp  Camera.cpp  LayerManager.cpp  Level.cpp  LevelForces.cpp  LevelParser.cpp  Main.cpp  MainWindow.cpp  Monster.cpp  MovingRenderable.cpp  NumberDigit.cpp  Physics.cpp  Profile.cpp  SDLRenderable.cpp  StateController.cpp  TileArray.cpp  TileSet.cpp  TileSetRepresentation.cpp  TimerDigit.cpp  Util.cpp
include/: ActorSelector.hpp  EndlessLevelGenerator.hpp  GameController.hpp  GameView.hpp  LevelCanvas.hpp  LevelEditorController.hpp  LevelSelector.hpp  Tile.hpp  TilesetPalette.hpp  pages.h
qml/: Character.qml  EndlessPage.qml  LevelEditor.qml  LevelSelector.qml  LevelStarter.qml  Main.qml  SecondPage.qml  SettingsPage.qml  StyledButton.qml
res/: RulesTiles.xml  assets (copy 1).qrc  assets.qrc  endless.h5  endless.xml  level 1.h5  level 1.xml  level 2.h5  level 2.xml  level 3.h5  level 3.xml  level 4.h5  level 4.xml  level.h5  level.xml  level.xml~  level_master (copy 1).h5  level_master (copy 1).xml  level_master.h5  level_master.xml  leveling (copy 1).h5  leveling.h5  leveling.xml
res/qml/: Character.qml  LevelEditor.qml  LevelSelector.qml  Main.qml  SecondPage.qml  StyledButton.qml
res/tileDefinition/: RulesTiles.xml
resources/: assets.qrc
src/: ActorSelector.cpp  EndlessLevelGenerator.cpp  GameController.cpp  GameView.cpp  LevelCanvas.cpp  LevelEditorController.cpp  LevelSelector.cpp  TilesetPalette.cpp  main.cpp  pages.cpp
src/game/: Actor.cpp  ActorForces.cpp  AnimatedRenderable.cpp  Camera.cpp  LayerManager.cpp  Level.cpp  LevelForces.cpp  LevelParser.cpp  LevelParser.hpp  Main.cpp  MainWindow.cpp  MovingRenderable.cpp  Physics.cpp  Profile.cpp  SDLRenderable.cpp  StaticRenderable.hpp  TileArray.cpp  TileSet.cpp  TileSetRepresentation.hpp  TileTree.tcc  Util.cpp  Util.hpp  Vector.hpp
src/game/io/: BaseHdf5IO.hpp  Hdf5Util.hpp  TileSetIO.hpp
wiki/: Dateiformat-Level.md  GitLab-Wiki-Upload.md  Installation-und-Start.md  Level-Editor.md  Spielanleitung.md  Technische-Architektur.md  _sidebar.md  home.md
